# komarchy

./: README.md  migrate.sh
docs/: KEYBINDS-TMUX.md  bm-tool-PLAN.md
files/local/share/bm/: pyproject.toml
files/local/share/bm/bm/: __init__.py  actions.py  cdp.py  cli.py  favicon.py  launcher.py  paths.py  store.py  theme.py  tui.py  tui.tcss
scripts/migration/: 000-00000-claudec.sh  000-00001-git-cfg.sh  000-00002-git-wrk.sh  000-00003-pmt-fnt.sh  000-00004-mnt-hpr.sh  001-00005-hyp-key.sh  001-00006-hyp-grp.sh  001-00007-hyp-idl.sh  001-00010-hyp-clp.sh  001-00011-hyp-clc.sh  002-00012-wyb-wks.sh  002-00013-wyb-clk.sh  002-00014-wyb-sty.sh  003-00015-fzf-cdf.sh  003-00016-fzf-cff.sh  003-00017-fzf-cdg.sh  003-00018-fzf-cds.sh  004-00019-str-cfg.sh  004-00020-bsh-als.sh  004-00021-gho-cfg.sh  005-00022-fnt-pkg.sh  005-00023-fntconf.sh  005-00024-hyplck.sh  005-00025-wyb-fnt.sh  005-00026-gho-fnt.sh  006-00027-lbr-env.sh  006-00028-nvd-env.sh  006-00029-lbr-icn.sh  007-00031-lzg-cfg.sh  007-00032-lzg-als.sh  008-00033-neo-clr.sh  008-00034-nvm-dfv.sh  008-00035-nvm-gsg.sh  008-00036-lzv-dap.sh  008-00037-lzv-prt.sh  008-00038-nvm-syn.sh  009-00039-cdx-bsh.sh  009-00040-cdx-kmp.sh  010-00041-typ-nvm.sh  010-00042-typ-ang.sh  (+86 more)
scripts/rollback/: 000-00000-claudec.sh  000-00001-git-cfg.sh  000-00002-git-wrk.sh  000-00003-pmt-fnt.sh  000-00004-mnt-hpr.sh  001-00005-hyp-key.sh  001-00006-hyp-grp.sh  001-00007-hyp-idl.sh  001-00010-hyp-clp.sh  001-00011-hyp-clc.sh  002-00012-wyb-wks.sh  002-00013-wyb-clk.sh  002-00014-wyb-sty.sh  003-00015-fzf-cdf.sh  005-00024-hyplck.sh  (+112 more)
(+3 files in other folders)
