[project]
name = "bm"
version = "0.1.69"
description = "Arc/Zen-style bookmark TUI for Chromium via CDP"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80",
    "httpx>=0.27",
    "click>=8.1",
]

[project.scripts]
bm-py = "bm.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bm"]
